--- a/css/layouts.css
+++ b/css/layouts.css
@@ -1,13 +1,45 @@
 
-  * {
-    font-family: 'Noto Sans JP', sans-serif;
-    display: flex;
-  }
+h1 {
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 5em;
+  line-height: 2em;
+  font-weight: bold;
+  text-align: center;
+  margin: 5px;
+
+}
+
+h2 {
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 1.5em;
+  line-height: 1em;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin: 10px;
+}
+
+a {
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 1em;
+  margin: 10px;
+
+}
+
+p {
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 1em;
+  margin: 10px;
+  max-width: 250px;
+  
+
+}
 
 
-  img{
-    float left;
+main{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 
-  #unicorn-template{
-    border: 1px solid black;
-  }
+
+}
+
